# forex-bot

./: .env.example  .gitignore  DEPLOY.md  Makefile  QUICKSTART.md  README.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  railway-services.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-railway.yml  deploy-release.yml  deploy-staging.yml  deploy-vercel.yml  deploy.yml  migrate.yml
backend/: .env.example  Dockerfile  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_seed_strategies.py  0003_phase2_tables.py  0004_seed_plans.py  0005_tv_signal.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  backtests.py  billing.py  broker_accounts.py  compliance.py  health.py  internal.py  live_consents.py  notifications.py  strategies.py  strategy_instances.py  tradingview.py  users.py
backend/app/core/: __init__.py  config.py  encryption.py  errors.py  logging.py  migrate_on_boot.py  redis.py  security.py  tokens.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: __init__.py  audit.py  auth.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  audit_log.py  backtest.py  broker_account.py  email_token.py  invoice.py  live_consent.py  notification.py  signal.py  strategy.py  strategy_instance.py  stripe_event.py  subscription.py  trade.py  user.py  user_consent.py
backend/app/schemas/: __init__.py  admin.py  auth.py  backtest.py  billing.py  broker.py  common.py  consent.py  internal.py  live.py  notification.py  strategy.py  tradingview.py  user.py
backend/app/services/: __init__.py  admin_service.py  auth_service.py  backtest_service.py  billing_service.py  broker_service.py  email_service.py  live_gate_service.py  oms_client.py  strategy_service.py  subscription_guard.py  tradingview_service.py
backend/app/workers/: __init__.py  email_worker.py
backend/scripts/: backfill_phase2.py  create_db_extensions.sql  healthcheck.sh  maintain_partitions.py  railway_post_deploy.sh  seed_admin.py  seed_sample_backtest.py  seed_strategies.sql  stripe_setup.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_auth_failure.py  test_auth_flow.py  test_auth_signup.py  test_backtest_create.py  test_billing_webhook.py  test_email_queue.py  test_health.py  test_internal_hmac.py  test_live_gate.py  test_railway_config.py  test_strategies.py  test_tradingview_endpoints.py
docs/: admin-setup.md
docs/api/: error-contract.md  openapi.yaml
docs/architecture/: nfr.md  system-architecture.md
docs/database/: data-retention.md  er-diagram.md  gdpr-export-spec.md  migration-runbook.md  orm-schema-sync-fixes.md  partitioning.md  schema.md  schema.sql  tv_signal-data-model.md
docs/deployment/: 15-minute-deploy.md  cloudflare-setup.md  cost-tracking.md  deployment-architecture.md  disaster-recovery.md  env-variables.md  neon-upstash-setup.md  observability.md  postmortem-template.md  production-runbook.md  runbook.md  slo.md  status-page.md
docs/design/: accessibility-checklist.md  design-system.md  microcopy-guidelines.md  personas.md  user-flows.md
docs/project/: communication-plan.md  integration-review-phase2.5.md  integration-review-phase2.md  integration-review-phase3.5.md  integration-review-phase3.md  integration-review.md  project-charter.md  risk-register.md  roadmap.md
docs/security/: admin-onboarding-runbook.md  admin-security.md  disclaimers-v2.md  email-security.md  financial-and-regulatory-risk.md  gdpr-pdpa-compliance.md  incident-response-admin.md  incident-response-playbook.md  incident-response-update.md  kill-switch.md  live-trading-launch-checklist.md  mt5-bridge-security.md  owasp-api-top10-checklist.md  regulatory-update.md  sbom-update.md  secrets-audit.md  secrets-management.md  secure-defaults.md  security-checklist-pre-launch.md  stripe-pci-scope.md  threat-model-admin.md  threat-model-phase2.md  threat-model.md  tradingview-integration-risk.md
docs/strategies/: backtest-api.md  donchian.md  ema-adx.md  ema-rsi.md  grid-bot.md  london-breakout.md  (+7 more)
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .vercelignore  DEPLOY-VERCEL.md  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
infra/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
mt5-bridge/: README.md  install.bat  install.ps1  pyproject.toml
mt5-bridge/mt5_bridge/: __init__.py  auth.py  config.py  mt5_client.py  safety.py  server.py
mt5-bridge/tests/: conftest.py  test_auth.py  test_config.py  test_safety.py  test_server.py
scripts/: deploy.sh  dev.sh  rollback.sh  smoke.sh
trading-engine/: Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  server.py
trading-engine/backtest/: __init__.py  runner.py  walk_forward.py
trading-engine/broker/: __init__.py  base.py  mt5_adapter.py  paper_adapter.py
trading-engine/cli/: __init__.py  retro.py  walk_forward.py
trading-engine/configs/: strategies.yaml
trading-engine/data/: __init__.py  loader.py  symbols.py
trading-engine/data/samples/: BTCUSDT_H1_sample.csv  BTCUSDT_H4_sample.csv  XAUUSD_H1_sample.csv  XAUUSD_M5_sample.csv  __init__.py  generate.py
trading-engine/live/: __init__.py  circuit_breaker.py  engine.py  gate.py  internal_client.py  monitor.py  router.py  server_endpoints.py  tv_signal_engine.py
trading-engine/risk/: __init__.py  manager.py  position_sizing.py
trading-engine/strategies/: __init__.py  base.py  donchian_breakout.py  ema_adx_trend.py  ema_rsi_swing.py  grid_bot.py  london_breakout.py  ny_killzone.py  tv_signal.py
trading-engine/tests/: test_backtest_api.py  test_circuit_breaker.py  test_internal_client.py  test_live_routes.py  test_strategies_smoke.py  test_tv_signal.py
trading-engine/tradingview/: __init__.py  client.py  scorer.py  symbols.py
trading-engine/workers/: __init__.py  backtest_worker.py  queue.py
(+197 files in other folders)
