[project]
name = "forex-bot-backend"
version = "0.1.0"
description = "Forex/Crypto trading bot SaaS — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Atlas Goro", email = "whyman404@gmail.com" },
]
license = { text = "Proprietary" }

dependencies = [
    # web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "starlette>=0.36.0",

    # data / db
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # validation / settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",

    # security
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",

    # observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "sentry-sdk[fastapi]>=1.40.0",

    # external services
    "stripe>=8.5.0",
    "redis>=5.0.1",
    "httpx>=0.27.0",
    "rq>=1.16.0",
    "qrcode[pil]>=7.4.2",

    # utility
    "python-multipart>=0.0.9",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # bandit security
    "ASYNC", # async best practices
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (ok in tests)
    "B008",  # function call in default arg (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests requiring DB/Redis",
    "unit: pure unit tests",
]
