[project]
name = "mt5-bridge"
version = "0.1.0"
description = "Windows-side bridge between the Forex-Bot trading engine and MetaTrader 5."
authors = [{ name = "Kairos Toki", email = "quant@forex-bot.internal" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "websockets>=12.0",
    # MetaTrader5 is the *actual* reason this service exists. It only
    # installs on Windows — pip will silently skip on Mac/Linux thanks to
    # the marker. Bridge boot in `config.from_env()` is the source of truth
    # that fails loudly if MT5 is missing on Windows.
    "MetaTrader5>=5.0.45; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
mt5-bridge = "mt5_bridge.server:run"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mt5_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
